# python-community-model

./: 280218212190.txt  MANIFEST.in  README.md  asdfasdf.txt  fddfdfdfdf.txt  jkahjkakjhasjhk.txt  lakljajklaskljkls  pyproject.toml
src/my_model/: __init__.py
src/nesh_model/: __init__.py
