[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nesh-model"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dhinesh Devanathan", email = "dhineshdevanathan@gmail.com" },
]
version="2025.08.08.dev01"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "keras"
]

[project.urls]
Documentation = "https://github.com/neshdev/python-community-model#readme"
Issues = "https://github.com/neshdev/python-community-model/issues"
Source = "https://github.com/neshdev/python-community-model"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]